# veritas

./: .gitignore  README.md  cleanPdf.py  pyproject.toml  requirements.txt  veritas.py
config/: .env.example
config/yaml/: agents.yaml  defaults.yaml  prompts.yaml
lib/: agents.py  bm25.py  config.py  levenshtein.py  pdf_parser.py
src/lib/: __init__.py  agents.py  config.py  yaml_config.py
src/veritas/: __init__.py  clean_pdf.py  cli.py  core.py
